fixed padding, margin of cards on mobile

--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -15,9 +15,10 @@
 .Pokemon #Name {
 	font-size: 1.5em;
 	font-weight: bold;
-	margin-bottom: 10px;
 }
-
+.Pokemon #Name > p {
+	margin: 0;
+}
 .Pokemon #Image {
 	width: 100%;
 	height: 100%;
@@ -29,9 +30,10 @@
 	align-items: center;
 	justify-content: center;
 	width: 100%;
-	height: 60px;
 	margin: 10px;
 	padding: 10px;
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
 
 .Pokemon #Type {
@@ -39,7 +41,7 @@
 	align-items: center;
 	justify-content: center;
 	width: 100%;
-	height: 100%;
+	height: 40px;
 	margin: 10px;
 	margin-top: 0px;
 	padding: 10px;
